--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -1,4 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ],
   "printWidth": 100
 }
