--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "pinia": "^3.0.2",
     "vue": "^3.5.13"
   },
   "devDependencies": {
