--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,14 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "80:80"
+    environment:
+      - HOST_PROC=/host/proc
+      - HOST_SYS=/host/sys
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /etc:/host/etc:ro
+    network_mode: host
+    pid: host
     restart: unless-stopped
