add temp sensors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
 services:
   server:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
       - "80:80"
     environment:
-      - HOST_PROC=/host/proc
-      - HOST_SYS=/host/sys
+      HOST_PROC: "/host/proc"
+      HOST_SYS: "/host/sys"
+      HOST_ETC: "/host/etc"
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
