--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     ports:
       - "80:80"
     environment:
+      PORT: "80"
       HOST_PROC: "/host/proc"
       HOST_SYS: "/host/sys"
       HOST_ETC: "/host/etc"
